--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ edition = "2018"
 
 [dependencies]
 bitflags = "^1.2"
-crc = "^1.8"
+crc = "3"
 log = "^0.4"
 uuid = { version = "^0.8", features = ["v4"] }
 
 [dev-dependencies]
-simplelog = "^0.8"
-tempfile = "^3.0"
+simplelog = "0.8"
+tempfile = "3.0"
